styles/style.css
body {
  width: 1100px;
  margin: 0 auto;
  font-family: 'Raleway';
  color: #000;
  background-color: #fff;
  line-height: 1.2;
}

/* HEADER */
.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  padding: 92px 50px;
}

.header__menu-list {
  display: flex;
  gap: 32px;
}

.header__menu-item {
  position: relative;
  text-transform: lowercase;
}

.header__menu-item:not(:last-child)::after {
  content: "•";
  position: absolute;
  right: -20px;
}

.header__logo-image {
  width: 148px;
}

.header__address {
  justify-self: end;
  font-style: normal;
  font-size: 18px;
  line-height: 1.2;
}

/* COVER */
.cover {
  position: relative;
  background-image: url(../images/cover.jpg);
  background-size: cover;
  background-position: center;
  padding: 165px 50px 50px;
  min-height: 757px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.overlay {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 0;
}

.cover__title {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 20px;
  color: #fff;
  font-size: 100px;
  font-weight: 700;
  line-height: 1;
  text-transform: uppercase;
  z-index: 1;
}

.aligned-text {
  letter-spacing: 0.3em;
  margin-right: -0.3em; /* Компенсация хвоста для центрирования */
}

.aligned-text_center { text-align: center; }
.aligned-text_right { text-align: right; }

.cover__description {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 78px;
  z-index: 1;
}

.cover__description-text {
  color: #fff;
  font-size: 22px;
  text-transform: uppercase;
  word-spacing: 18px;
}

.bet-button {
  border: 1px solid #fff;
  color: #fff;
  padding: 12px 31px;
  font-size: 22px;
  text-transform: uppercase;
}

/* LOTS */
.lots {
  padding: 180px 50px 0;
}

.lots__heading {
  font-size: 40px;
  margin-bottom: 27px;
  padding-left: 65px;
  text-transform: uppercase;
}

.lots__card-list {
  display: flex;
  gap: 25px;
}

.lots__card-list-item {
  width: 334px;
  min-height: 450px;
}

.card {
  position: relative;
  height: 100%;
  padding: 50px 40px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-size: cover;
  background-position: center;
  color: #fff;
}

.card_type_film { background-image: url(../images/card-lot-01.jpg); }
.card_type_book { background-image: url(../images/card-lot-02.jpg); }
.card_type_picture { background-image: url(../images/card-lot-03.jpg); }

.card__title {
  font-size: 22px;
  font-weight: 700;
  text-decoration: underline;
  text-transform: uppercase;
  z-index: 1;
  line-height: 1.2;
}

.card__text {
  font-size: 20px;
  line-height: 1.2;
  z-index: 1;
}

.lots__look-more-link {
  display: block;
  margin-top: 30px;
  padding-left: 65px;
  font-size: 20px;
  text-decoration: underline;
}

/* ABOUT */
.about {
  display: grid;
  grid-template-columns: 334px 1fr; /* Фиксируем колонку под размер карточки */
  padding: 180px 50px;
  gap: 30px;
}

.about__column_type_logo {
  display: flex;
  justify-content: center;
  align-items: center;
}

.about__logo {
  width: 240px;
  height: 240px;
  background-color: #000;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.about__logo-image {
  width: 148px;
}

.about__title {
  font-size: 40px;
  margin: 100px 0 40px;
  text-transform: uppercase;
}

.about__text p {
  font-size: 20px;
  line-height: 1.2;
  margin-bottom: 25px;
}

/* FOOTER */
.footer {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  padding: 180px 50px 90px;
}

.footer__menu-list {
  display: flex;
  gap: 32px;
}

.footer__social-list {
  display: flex;
  gap: 16px;
  justify-self: end;
}

.footer__social-link {
  display: flex;
  width: 48px;
  height: 48px;
  border: 1px solid #000;
  border-radius: 50%;
  justify-content: center;
  align-items: center;
}

